--- a/styles.css
+++ b/styles.css
@@ -34,6 +34,37 @@ body {
     border-radius: 20px;
   }
 
+
+  .authorization-form {
+    padding: 20px;
+    margin-top: 50px;
+    width: 596px;
+    box-sizing: border-box;
+    background: radial-gradient(
+      75.42% 75.42% at 50% 42.37%,
+      rgba(53, 53, 53, 0) 22.92%,
+      #7334ea 100%
+    );
+    filter: drop-shadow(0px 20px 67px rgba(0, 0, 0, 0.08));
+    border-radius: 20px;
+  }
+  
+  .authorization-form-row {
+    padding: 20px;
+    margin-top: 48px;
+    display: flex;
+    flex-direction: column;
+  }
+  
+  .authorization-form-title {
+    font-size: 24px;
+    font-family: Helvetica;
+    text-align: center;
+    align-items: center;
+  }
+
+
+
   .comments {
     display: flex;
     flex-direction: column;
@@ -106,6 +137,22 @@ body {
     border: none;
   }
 
+
+  .authorization-input-container {
+    padding-left: 50px;
+  }
+  
+  .authorization-form-name {
+    font-size: 16px;
+    font-family: Helvetica;
+    border-radius: 8px;
+    border: none;
+    margin-bottom: 3px;
+    padding: 10px;
+  }
+
+
+
   .add-form-name {
     width: 300px;
     padding: 11px 22px;
@@ -176,56 +223,19 @@ body {
     font-weight: bold;
   }
 
-  body {
-    font-family: Arial, sans-serif;
-    background-color: #202020;
-    margin: 0;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    min-height: 100vh;
-  }
-
-  .login-container {
-    background-color: #fff;
-    border-radius: 8px;
-    padding: 20px;
-    box-shadow: 0 2px 6px rgba(0, 0, 0, 0.1);
-    width: 300px;
-  }
-
-  .login-container h2 {
-    margin-bottom: 10px;
-  }
-
-  .input-container {
-    margin-bottom: 15px;
-  }
-  .input-group label {
-    display: block;
-    margin-bottom: 5px;
-  }
-
-  .input-group input {
-    width: 100%;
-    padding: 8px;
-    border: 1px solid #ccc;
-    border-radius: 4px;
-  }
-
-  .input-group input:focus {
-    border-color: #007bff;
-  }
-
-  .btn {
-    background-color: #007bff;
-    color: #fff;
+  .login-button {
+    background-color: #bcec30;
+    margin-top: 20px;
+    font-size: 24px;
+    padding: 10px 20px;
     border: none;
-    border-radius: 4px;
-    padding: 10px 15px;
+    border-radius: 18px;
     cursor: pointer;
-    width: 100%;
   }
-  .btn:hover {
-    background-color: #0056b3;
+  
+  .login-text {
+    text-align: center;
+    font-size: 24px;
   }
+
+  
