--- a/styles.css
+++ b/styles.css
@@ -236,4 +236,15 @@ body {
 
 .login-button {
   background-color: #bcec30;
-  margin
+  margin-top: 20px;
+  font-size: 24px;
+  padding: 10px 20px;
+  border: none;
+  border-radius: 18px;
+  cursor: pointer;
+}
+
+.login-text {
+  text-align: center;
+  font-size: 24px;
+}
